--- a/WechatLibrary/WechatLibrary/WechatLibrary.Net45.csproj
+++ b/WechatLibrary/WechatLibrary/WechatLibrary.Net45.csproj
@@ -115,13 +115,16 @@
     <Compile Include="Model\Message\Response\TextResult.cs" />
     <Compile Include="Model\Message\Response\VideoResult.cs" />
     <Compile Include="Model\Message\Response\VoiceResult.cs" />
-    <Compile Include="Model\OAuth2AccessToken.cs" />
     <Compile Include="Model\Return\AccessTokenReturn.cs" />
     <Compile Include="Model\Return\OAuth2AccessTokenReturn.cs" />
+    <Compile Include="Model\Return\OAuth2UserInfoReturn.cs" />
     <Compile Include="Model\Return\ReturnBase.cs" />
     <Compile Include="Model\ReceiveLog\ReceiveLog.cs" />
+    <Compile Include="Model\Return\UploadReturn.cs" />
+    <Compile Include="Model\UserManagement\UserInfoLanguage.cs" />
     <Compile Include="Model\WechatAccount.cs" />
     <Compile Include="Model\WechatEntities.cs" />
+    <Compile Include="Model\WechatResource.cs" />
     <Compile Include="ProcessPipeline\DataBaseProcess\ProcessPipeline.ExecuteImageMessageDataBaseProcess.cs" />
     <Compile Include="ProcessPipeline\DataBaseProcess\ProcessPipeline.ExecuteMenuButtonClickMessageDataBaseProcess.cs" />
     <Compile Include="ProcessPipeline\DataBaseProcess\ProcessPipeline.ExecuteTextMessageDataBaseProcess.cs" />
@@ -142,10 +145,15 @@
     <Compile Include="ProcessPipeline\ProcessPipeline.SetDefaultValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AccessTokenService.cs" />
-    <Compile Include="Service\MediaFileService.cs" />
+    <Compile Include="Service\WechatResourceService.cs" />
     <Compile Include="Service\MessageLogService.cs" />
     <Compile Include="Service\MenuService.cs" />
     <Compile Include="Service\MessageTypeService.cs" />
+    <Compile Include="Service\UserManagementService\UserManagementService.BuildBaseLink.cs" />
+    <Compile Include="Service\UserManagementService\UserManagementService.BuildUserInfoLink.cs" />
+    <Compile Include="Service\UserManagementService\UserManagementService.GetOAuth2AccessTokenReturn.cs" />
+    <Compile Include="Service\UserManagementService\UserManagementService.GetOpenId.cs" />
+    <Compile Include="Service\UserManagementService\UserManagementService.GetUserInfo.cs" />
     <Compile Include="Service\WechatAccountService.cs" />
     <Compile Include="Signature\Signature.cs" />
     <Compile Include="Wechat.cs" />
