--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -107,6 +107,15 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\LocalMenuService\GetLocalFirstMenu.ashx.cs">
+      <DependentUpon>GetLocalFirstMenu.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Service\LocalMenuService\GetLocalSecondMenu.ashx.cs">
+      <DependentUpon>GetLocalSecondMenu.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Service\LocalMenuService\GetMenuButtonSetting.ashx.cs">
+      <DependentUpon>GetMenuButtonSetting.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\WechatAccountService\AddNewWechatAccount.ashx.cs">
       <DependentUpon>AddNewWechatAccount.ashx</DependentUpon>
     </Compile>
@@ -254,6 +263,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\WechatServerMenuService\DeleteWechatServerMenu.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\LocalMenuService\GetLocalFirstMenu.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\LocalMenuService\GetLocalSecondMenu.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\LocalMenuService\GetMenuButtonSetting.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
