--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -107,6 +107,12 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\LocalMenuService\AddNewFirstMenu.ashx.cs">
+      <DependentUpon>AddNewFirstMenu.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Service\LocalMenuService\AddNewSecondMenu.ashx.cs">
+      <DependentUpon>AddNewSecondMenu.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\LocalMenuService\GetLocalFirstMenu.ashx.cs">
       <DependentUpon>GetLocalFirstMenu.ashx</DependentUpon>
     </Compile>
@@ -272,6 +278,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\LocalMenuService\GetMenuButtonSetting.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\LocalMenuService\AddNewFirstMenu.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\LocalMenuService\AddNewSecondMenu.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
