--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -45,8 +45,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CommonDotNet">
-      <HintPath>..\packages\CommonDotNet.1.1.5\lib\net40\CommonDotNet.dll</HintPath>
+    <Reference Include="CommonDotNet, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\CommonDotNet.1.1.8\lib\net40\CommonDotNet.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.0\lib\net40\EntityFramework.dll</HintPath>
@@ -112,6 +113,9 @@
     </Compile>
     <Compile Include="Service\LocalMenuService\AddNewSecondMenu.ashx.cs">
       <DependentUpon>AddNewSecondMenu.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Service\LocalMenuService\DeleteFirstMenu.ashx.cs">
+      <DependentUpon>DeleteFirstMenu.ashx</DependentUpon>
     </Compile>
     <Compile Include="Service\LocalMenuService\GetLocalFirstMenu.ashx.cs">
       <DependentUpon>GetLocalFirstMenu.ashx</DependentUpon>
@@ -284,6 +288,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\LocalMenuService\AddNewSecondMenu.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\LocalMenuService\DeleteFirstMenu.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
