--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -132,6 +132,9 @@
     <Compile Include="Service\LocalMenuService\SubmitMenuButtonSetting.ashx.cs">
       <DependentUpon>SubmitMenuButtonSetting.ashx</DependentUpon>
     </Compile>
+    <Compile Include="Service\TextRequestMatchService\Add.ashx.cs">
+      <DependentUpon>Add.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\WechatAccountService\AddNewWechatAccount.ashx.cs">
       <DependentUpon>AddNewWechatAccount.ashx</DependentUpon>
     </Compile>
@@ -303,6 +306,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\LocalMenuService\DeleteSecondMenu.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\TextRequestMatchService\Add.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
