--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -135,6 +135,12 @@
     <Compile Include="Service\TextRequestMatchService\Add.ashx.cs">
       <DependentUpon>Add.ashx</DependentUpon>
     </Compile>
+    <Compile Include="Service\TextRequestMatchService\Delete.ashx.cs">
+      <DependentUpon>Delete.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Service\TextRequestMatchService\Modify.ashx.cs">
+      <DependentUpon>Modify.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\WechatAccountService\AddNewWechatAccount.ashx.cs">
       <DependentUpon>AddNewWechatAccount.ashx</DependentUpon>
     </Compile>
@@ -309,6 +315,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\TextRequestMatchService\Add.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\TextRequestMatchService\Delete.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\TextRequestMatchService\Modify.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
