--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -108,6 +108,15 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\AutoResponseService\AddTextResult.ashx.cs">
+      <DependentUpon>AddTextResult.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Service\AutoResponseService\DeleteImageResult.ashx.cs">
+      <DependentUpon>DeleteImageResult.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Service\AutoResponseService\DeleteTextResult.ashx.cs">
+      <DependentUpon>DeleteTextResult.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\AutoResponseService\GetAllImageResult.ashx.cs">
       <DependentUpon>GetAllImageResult.ashx</DependentUpon>
     </Compile>
@@ -333,6 +342,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\AutoResponseService\GetAllImageResult.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\AutoResponseService\DeleteTextResult.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\AutoResponseService\DeleteImageResult.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\AutoResponseService\AddTextResult.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
