--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -108,6 +108,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\AutoResponseService\AddImageResult.ashx.cs">
+      <DependentUpon>AddImageResult.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\AutoResponseService\AddTextResult.ashx.cs">
       <DependentUpon>AddTextResult.ashx</DependentUpon>
     </Compile>
@@ -351,6 +354,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\AutoResponseService\AddTextResult.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\AutoResponseService\AddImageResult.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
