--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -123,6 +123,9 @@
     <Compile Include="Service\AutoResponseService\GetAllImageResult.ashx.cs">
       <DependentUpon>GetAllImageResult.ashx</DependentUpon>
     </Compile>
+    <Compile Include="Service\AutoResponseService\GetAllNewsResult.ashx.cs">
+      <DependentUpon>GetAllNewsResult.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\AutoResponseService\GetAllTextResult.ashx.cs">
       <DependentUpon>GetAllTextResult.ashx</DependentUpon>
     </Compile>
@@ -369,6 +372,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\AutoResponseService\ModifyImageResult.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\AutoResponseService\GetAllNewsResult.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
