--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -111,6 +111,9 @@
     <Compile Include="Service\AutoResponseService\AddImageResult.ashx.cs">
       <DependentUpon>AddImageResult.ashx</DependentUpon>
     </Compile>
+    <Compile Include="Service\AutoResponseService\AddNewsResult.ashx.cs">
+      <DependentUpon>AddNewsResult.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\AutoResponseService\AddTextResult.ashx.cs">
       <DependentUpon>AddTextResult.ashx</DependentUpon>
     </Compile>
@@ -381,6 +384,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\AutoResponseService\DeleteNewsResult.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\AutoResponseService\AddNewsResult.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
