--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -174,6 +174,9 @@
     <Compile Include="Service\TextRequestMatchService\GetAll.ashx.cs">
       <DependentUpon>GetAll.ashx</DependentUpon>
     </Compile>
+    <Compile Include="Service\TextRequestMatchService\GetById.ashx.cs">
+      <DependentUpon>GetById.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\TextRequestMatchService\Modify.ashx.cs">
       <DependentUpon>Modify.ashx</DependentUpon>
     </Compile>
@@ -393,6 +396,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\TextRequestMatchService\GetAll.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\TextRequestMatchService\GetById.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
