--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -135,6 +135,9 @@
     <Compile Include="Service\AutoResponseService\GetAllTextResult.ashx.cs">
       <DependentUpon>GetAllTextResult.ashx</DependentUpon>
     </Compile>
+    <Compile Include="Service\AutoResponseService\GetNewsResultById.ashx.cs">
+      <DependentUpon>GetNewsResultById.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\AutoResponseService\ModifyImageResult.ashx.cs">
       <DependentUpon>ModifyImageResult.ashx</DependentUpon>
     </Compile>
@@ -399,6 +402,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\TextRequestMatchService\GetById.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\AutoResponseService\GetNewsResultById.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
