--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -195,6 +195,9 @@
     <Compile Include="Service\TextRequestMatchService\LoadImageResults.ashx.cs">
       <DependentUpon>LoadImageResults.ashx</DependentUpon>
     </Compile>
+    <Compile Include="Service\TextRequestMatchService\LoadNewsResults.ashx.cs">
+      <DependentUpon>LoadNewsResults.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\TextRequestMatchService\LoadTextResults.ashx.cs">
       <DependentUpon>LoadTextResults.ashx</DependentUpon>
     </Compile>
@@ -441,6 +444,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\TextRequestMatchService\LoadImageResults.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\TextRequestMatchService\LoadNewsResults.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
