--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -100,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AutoResponseController.cs" />
+    <Compile Include="Controllers\MessageLogController.cs" />
     <Compile Include="Controllers\WechatServerMenuController.cs" />
     <Compile Include="Controllers\LocalMenuController.cs" />
     <Compile Include="Controllers\DesktopController.cs" />
@@ -179,6 +180,9 @@
     </Compile>
     <Compile Include="Service\LocalMenuService\SubmitMenuButtonSetting.ashx.cs">
       <DependentUpon>SubmitMenuButtonSetting.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Service\MessageLogService\GetAll.ashx.cs">
+      <DependentUpon>GetAll.ashx</DependentUpon>
     </Compile>
     <Compile Include="Service\TextRequestMatchService\Add.ashx.cs">
       <DependentUpon>Add.ashx</DependentUpon>
@@ -449,6 +453,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\TextRequestMatchService\LoadNewsResults.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\MessageLogService\GetAll.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
