--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -184,6 +184,12 @@
     <Compile Include="Service\MessageLogService\GetAll.ashx.cs">
       <DependentUpon>GetAll.ashx</DependentUpon>
     </Compile>
+    <Compile Include="Service\MessageLogService\GetRequestMessageSource.ashx.cs">
+      <DependentUpon>GetRequestMessageSource.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Service\MessageLogService\GetResponseResultSource.ashx.cs">
+      <DependentUpon>GetResponseResultSource.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\TextRequestMatchService\Add.ashx.cs">
       <DependentUpon>Add.ashx</DependentUpon>
     </Compile>
@@ -456,6 +462,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\MessageLogService\GetAll.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\MessageLogService\GetRequestMessageSource.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\MessageLogService\GetResponseResultSource.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
