--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -100,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AutoResponseController.cs" />
+    <Compile Include="Controllers\ResourceController.cs" />
     <Compile Include="Controllers\MessageLogController.cs" />
     <Compile Include="Controllers\WechatServerMenuController.cs" />
     <Compile Include="Controllers\LocalMenuController.cs" />
