--- a/WechatLibrary/WechatManager/WechatManager.csproj
+++ b/WechatLibrary/WechatManager/WechatManager.csproj
@@ -221,6 +221,9 @@
     <Compile Include="Service\TextRequestMatchService\LoadTextResults.ashx.cs">
       <DependentUpon>LoadTextResults.ashx</DependentUpon>
     </Compile>
+    <Compile Include="Service\TextRequestMatchService\LoadVoiceResults.ashx.cs">
+      <DependentUpon>LoadVoiceResults.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Service\TextRequestMatchService\Modify.ashx.cs">
       <DependentUpon>Modify.ashx</DependentUpon>
     </Compile>
@@ -487,6 +490,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\AutoResponseService\DeleteVoiceResult.ashx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\TextRequestMatchService\LoadVoiceResults.ashx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
