--- a/WechatLibrary/WechatLibrary/WechatLibrary.Net40.csproj
+++ b/WechatLibrary/WechatLibrary/WechatLibrary.Net40.csproj
@@ -84,6 +84,11 @@
     <Compile Include="Model\AutoResponse\Result\TextAutoResponseResult.cs" />
     <Compile Include="Model\AutoResponse\Result\VideoAutoResponseResult.cs" />
     <Compile Include="Model\AutoResponse\Result\VoiceAutoResponseResult.cs" />
+    <Compile Include="Model\GroupSend\IGroupSend.cs" />
+    <Compile Include="Model\GroupSend\GroupSendImage.cs" />
+    <Compile Include="Model\GroupSend\GroupSendNews.cs" />
+    <Compile Include="Model\GroupSend\GroupSendText.cs" />
+    <Compile Include="Model\GroupSend\GroupSendVoice.cs" />
     <Compile Include="Model\Menu\Menu.cs" />
     <Compile Include="Model\Menu\MenuButton.cs" />
     <Compile Include="Model\Menu\MenuButtonBase.cs" />
@@ -117,6 +122,9 @@
     <Compile Include="Model\Message\Response\VoiceResult.cs" />
     <Compile Include="Model\ResultLog\ResultLog.cs" />
     <Compile Include="Model\Return\AccessTokenReturn.cs" />
+    <Compile Include="Model\Return\GetUserListReturn.cs" />
+    <Compile Include="Model\Return\GroupSendReturn.cs" />
+    <Compile Include="Model\Return\NewsUploadReturn.cs" />
     <Compile Include="Model\Return\OAuth2AccessTokenReturn.cs" />
     <Compile Include="Model\Return\OAuth2UserInfoReturn.cs" />
     <Compile Include="Model\Return\ReturnBase.cs" />
@@ -148,6 +156,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AccessTokenService.cs" />
     <Compile Include="Service\CustomerServiceMessageService.cs" />
+    <Compile Include="Service\GroupSendService\GroupSendService.ImageResultConvert.cs" />
+    <Compile Include="Service\GroupSendService\GroupSendService.Send.cs" />
+    <Compile Include="Service\GroupSendService\GroupSendService.TextResultConvert.cs" />
+    <Compile Include="Service\GroupSendService\GroupSendService.VoiceResultConvert.cs" />
     <Compile Include="Service\MessageLogService.cs" />
     <Compile Include="Service\MenuService.cs" />
     <Compile Include="Service\MessageTypeService.cs" />
@@ -156,6 +168,7 @@
     <Compile Include="Service\UserManagementService\UserManagementService.GetOAuth2AccessTokenReturn.cs" />
     <Compile Include="Service\UserManagementService\UserManagementService.GetOpenId.cs" />
     <Compile Include="Service\UserManagementService\UserManagementService.GetUserInfo.cs" />
+    <Compile Include="Service\UserManagementService\UserManagementService.GetUserList.cs" />
     <Compile Include="Service\WechatAccountService.cs" />
     <Compile Include="Service\WechatResourceService.cs" />
     <Compile Include="Signature\Signature.cs" />
@@ -166,6 +179,7 @@
     <None Include="App.config" />
     <Compile Include="Cache\Cache.HandlerConstructorDelegates.cs" />
     <None Include="packages.config" />
+    <Compile Include="Service\GroupSendService\GroupSendService.NewsResultConvert.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
