--- a/WechatLibrary/WechatLibrary/WechatLibrary.Net40.csproj
+++ b/WechatLibrary/WechatLibrary/WechatLibrary.Net40.csproj
@@ -24,7 +24,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Release\net40\</OutputPath>
     <DefineConstants>TRACE;Net40</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommonDotNet">
-      <HintPath>..\packages\CommonDotNet.1.1.5\lib\net40\CommonDotNet.dll</HintPath>
+      <HintPath>..\packages\CommonDotNet.1.1.9\lib\net40\CommonDotNet.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.0\lib\net40\EntityFramework.dll</HintPath>
